[#14926] Fix UnsupportedOperationException with Hot Rod transaction and decorated caches
Signed-off-by: Pedro Ruivo <pedro@infinispan.org>